test/tests/errors/error-procedure-incorrect-param2.sm
// true
// false
// false
/**/
/**/

program {
    proc x() {
        output "t";
    }

    x(1);
}